Inclusão de footer na página

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>projeto usando git para versionar o código</h1>
     <img src="./images/git.png" alt="Logo github" width="50px">
+    <footer>TEste de fim de página</footer>
 </body>
 </html>
