ajuste nos erros de português do dev cabeçudo

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>projeto usando git para versionar o código</h1>
     <img src="./images/git.png" alt="Logo github" width="50px">
-    <footer>TEste de fim de página</footer>
+    
+    <footer>Teste de fim de página.</footer>
 </body>
 </html>
